# DiagnosticBenchmarking

./: .gitignore  LICENSE  README.md  pyproject.toml
data/pointer_benchmarks/: case_challenges_source_verified_locked_or_license_unknown.csv  initial_development_case_shortlist.json  prestigious_neurology_case_challenges.json
data/public_benchmark/: README.md  neuro_psych_cases.jsonl
docs/public/: case_challenge_quality_guardrails.md  harness_feedback_on_generation_20260619.md  next_batch_creation_guide.md  public349_review_needed_20260619.jsonl
src/neurologybm/: __init__.py  case_eval.py  case_validation.py  cli.py  comments.py  concurrency.py  conversion.py  deepseek.py  filters.py  hf_sources.py  huggingface.py  licenses.py  metadata.py  ncbi.py  prompt_extract.py  public_eval.py  public_refine.py  queries.py  sources.py  split_audit.py  transform_extract.py
tests/: test_case_validation.py  test_comments.py  test_concurrency.py  test_deepseek_eval.py  test_filters.py  test_hf_sources.py  test_licenses.py  test_metadata.py  test_prompt_extract.py  test_public_eval.py  test_public_refine.py  test_queries.py  test_sources.py  test_split_audit.py  test_transform_extract.py
